--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,10 +39,23 @@ a:hover {
 }
 
 .title {
+  padding-top: 110px;
   font-family: "lobster";
   font-size: 10em;
   color: #fdfdfd;
   text-align: center;
+}
+
+.arrow-down {
+  width: 0; 
+  height: 0; 
+  border-left: 20px solid transparent;
+  border-right: 20px solid transparent;
+  border-top: 20px solid #FDFDFD;
+  padding-bottom: 5px;
+  display: table;
+  margin: 0 auto;
+  visibility: hidden;
 }
 
 .wrap {
@@ -51,6 +64,7 @@ a:hover {
 
 .parent {
   margin-top:3%;
+  overflow-x: hidden;
 }
 
 .label:hover {
@@ -58,8 +72,16 @@ a:hover {
     background: #eee;
 }
 
-#child {
+.child_blue {
   clear: both;
+  background-color:#49c3fb;
+}
+
+.child_white {
+  clear: both;
+  background-color: #FDFDFD;
+  padding-top: 8em;
+  padding-bottom: 8em;
 }
 
 #tri1 {
@@ -68,7 +90,7 @@ a:hover {
   font-size: 2em;
   font-family: "roboto-thin";
   text-align: center;
-  color: white;
+  color: #48C3FB;
 }
 
 #tri2 {
@@ -77,7 +99,7 @@ a:hover {
   font-size: 2em;
   font-family: "roboto-thin";
   text-align: center;
-  color: white;
+  color: #48C3FB;
 }
 
 #tri3 {
@@ -86,7 +108,7 @@ a:hover {
   font-size: 2em;
   font-family: "roboto-thin";
   text-align: center;
-  color: white;
+  color: #48C3FB;
 }
 
 #window {
@@ -127,14 +149,25 @@ a:hover {
   margin-left: auto;
   margin-right: auto;
   width:50%;
+  padding-bottom: 110px;
+}
+
+.label-primary:hover{
+  background-color: #7DD6FF;
+}
+
+.label-primary:active {
+    -webkit-box-shadow: inset 0 2px 2px rgba(0,0,0, 0.3), inset 0 10px 20px rgba(0,0,0, 0.08);
+    -moz-box-shadow: inset 0 2px 2px rgba(0,0,0, 0.3), inset 0 10px 20px rgba(0,0,0, 0.08);
+    box-shadow: inset 0 2px 2px rgba(0,0,0, 0.3), inset 0 10px 20px rgba(0,0,0, 0.08);
 }
 
 .label-primary {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
   font-size: 2em;
   font-family: "roboto-thin";
-  background-color: #fdfdfd;
-  color: #49c3fb;
+  background-color: #49c3fb;
+  color: #fdfdfd;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -180,7 +213,10 @@ a:hover {
     word-wrap:break-word;
      white-space: normal;
   }
-
+  .child_white {
+    padding-top: 4em;
+    padding-bottom: 4em;
+  }
 }
 
 @media all and (max-width: 460px) {
@@ -189,6 +225,9 @@ a:hover {
   }
   #logo {
     width:60%;
+  }
+  .arrow-down {
+    visibility: visible;
   }
 }
 
