--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,22 +1,57 @@
 <div class="parent">
-    <div id="child">
-        <img id="logo" border="0" src="assets/insta.png" alt="logo" width="25%" height="25%">
+    <div id="full-window" class="child_blue">
+        <!--<img id="logo" border="0" src="assets/insta.png" alt="logo" width="25%" height="25%">-->
         <h1 class="title">#SelfieAware</h1>
         <p id="tagline">How much do you selfie?</p>
-        <%= link_to "<span class='label label-primary'>Log in with Instagram</span>".html_safe, Instagram.authorize_url(:redirect_uri => "http://selfieaware.com/callback"), {id: "get_started"} %>
-        <%= link_to "<span class='label label-primary'>About Us</span>".html_safe, "/about", {id: "learn_more"} %>
+        <div class="arrow-down"></div>
     </div>
-    <div id="cycles">
-        <div class="row">
-          <div id="tri1" class="col-md-4">
-            <img id="logo1" border="0" src="assets/cloud.png" alt="logo" width="75%" height="75%"><div style="padding-top:4%"> </div>Login with Instagram.<br> That's where most<br>selfies hide.
+    <div class="child_white">
+      <div class="row">
+        <%= link_to "<span class='label label-primary'>Get Started</span>".html_safe, Instagram.authorize_url(:redirect_uri => "http://selfieaware.com/callback"), {id: "get_started"} %>
+          <%= link_to "<span class='label label-primary'>About Us</span>".html_safe, "/about", {id: "learn_more"} %>
+      </div>
+      <div id="cycles">
+          <div class="row">
+            <div id="tri1" class="col-md-4">
+              <img id="logo1" border="0" src="assets/cloud.png" alt="logo" width="75%" height="75%"><div style="padding-top:4%"> </div>
+              Login with Instagram.<br> That's where most<br>selfies hide.
+            </div>
+            <div id="tri2" class="col-md-4">
+              <img id="logo2" border="0" src="assets/calc.png" alt="logo2" width="60%" height="60%">Wait a second as<br>we calculate your<br>Selfie Score.
+            </div>
+            <div id="tri3" class="col-md-4">
+              <img id="logo3" border="0" src="assets/facebook.png" alt="logo3" width="50%" height="50%"><div style="padding-top:3%"> </div>Share your results<br>on Facebook!
+            </div>
           </div>
-          <div id="tri2" class="col-md-4">
-            <img id="logo2" border="0" src="assets/calc.png" alt="logo2" width="60%" height="60%">Wait a second as<br>we calculate your<br>Selfie Score.
-          </div>
-          <div id="tri3" class="col-md-4">
-            <img id="logo3" border="0" src="assets/facebook.png" alt="logo3" width="50%" height="50%"><div style="padding-top:3%"> </div>Share your results<br>on Facebook!
-          </div>
-        </div>
+      </div>
     </div>
 </div>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-47496649-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+<script>
+  function checkMobile() {
+  var check = false;
+  (function(a){if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine|fennec|hiptop|iemobile|ip(hone|od)|iris|kindle|lge |maemo|midp|mmp|mobile.+firefox|netfront|opera m(ob|in)i|palm( os)?|phone|p(ixi|re)\/|plucker|pocket|psp|series(4|6)0|symbian|treo|up\.(browser|link)|vodafone|wap|windows (ce|phone)|xda|xiino/i.test(a)||/1207|6310|6590|3gso|4thp|50[1-6]i|770s|802s|a wa|abac|ac(er|oo|s\-)|ai(ko|rn)|al(av|ca|co)|amoi|an(ex|ny|yw)|aptu|ar(ch|go)|as(te|us)|attw|au(di|\-m|r |s )|avan|be(ck|ll|nq)|bi(lb|rd)|bl(ac|az)|br(e|v)w|bumb|bw\-(n|u)|c55\/|capi|ccwa|cdm\-|cell|chtm|cldc|cmd\-|co(mp|nd)|craw|da(it|ll|ng)|dbte|dc\-s|devi|dica|dmob|do(c|p)o|ds(12|\-d)|el(49|ai)|em(l2|ul)|er(ic|k0)|esl8|ez([4-7]0|os|wa|ze)|fetc|fly(\-|_)|g1 u|g560|gene|gf\-5|g\-mo|go(\.w|od)|gr(ad|un)|haie|hcit|hd\-(m|p|t)|hei\-|hi(pt|ta)|hp( i|ip)|hs\-c|ht(c(\-| |_|a|g|p|s|t)|tp)|hu(aw|tc)|i\-(20|go|ma)|i230|iac( |\-|\/)|ibro|idea|ig01|ikom|im1k|inno|ipaq|iris|ja(t|v)a|jbro|jemu|jigs|kddi|keji|kgt( |\/)|klon|kpt |kwc\-|kyo(c|k)|le(no|xi)|lg( g|\/(k|l|u)|50|54|\-[a-w])|libw|lynx|m1\-w|m3ga|m50\/|ma(te|ui|xo)|mc(01|21|ca)|m\-cr|me(rc|ri)|mi(o8|oa|ts)|mmef|mo(01|02|bi|de|do|t(\-| |o|v)|zz)|mt(50|p1|v )|mwbp|mywa|n10[0-2]|n20[2-3]|n30(0|2)|n50(0|2|5)|n7(0(0|1)|10)|ne((c|m)\-|on|tf|wf|wg|wt)|nok(6|i)|nzph|o2im|op(ti|wv)|oran|owg1|p800|pan(a|d|t)|pdxg|pg(13|\-([1-8]|c))|phil|pire|pl(ay|uc)|pn\-2|po(ck|rt|se)|prox|psio|pt\-g|qa\-a|qc(07|12|21|32|60|\-[2-7]|i\-)|qtek|r380|r600|raks|rim9|ro(ve|zo)|s55\/|sa(ge|ma|mm|ms|ny|va)|sc(01|h\-|oo|p\-)|sdk\/|se(c(\-|0|1)|47|mc|nd|ri)|sgh\-|shar|sie(\-|m)|sk\-0|sl(45|id)|sm(al|ar|b3|it|t5)|so(ft|ny)|sp(01|h\-|v\-|v )|sy(01|mb)|t2(18|50)|t6(00|10|18)|ta(gt|lk)|tcl\-|tdg\-|tel(i|m)|tim\-|t\-mo|to(pl|sh)|ts(70|m\-|m3|m5)|tx\-9|up(\.b|g1|si)|utst|v400|v750|veri|vi(rg|te)|vk(40|5[0-3]|\-v)|vm40|voda|vulc|vx(52|53|60|61|70|80|81|83|85|98)|w3c(\-| )|webc|whit|wi(g |nc|nw)|wmlb|wonu|x700|yas\-|your|zeto|zte\-/i.test(a.substr(0,4)))check = true})(navigator.userAgent||navigator.vendor||window.opera);
+  return check; }
+  console.log(checkMobile());
+  $(function(){
+    if($(window).width() <= 460 && checkMobile()){
+      $(window).load(function(){ // On load
+        $('#full-window').css({'height':(($(window).height()))+'px'});
+      });
+      $(window).resize(function(){ // On resize
+        $('#full-window').css({'height':(($(window).height()))+'px'});
+      });
+    }
+  });
+</script>
