--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -10,7 +10,7 @@
 </div>
 <div id="calculation_results">
 </div>
-<input type="text" id="user_search" placeholder="Search for users">
+<input type="text" id="user_search" placeholder="Search all Instagram users">
 <div id="search_results"></div>
 <div id="follows">
     <h4 style="text-align: center">Users You Follow</h4>
@@ -18,6 +18,7 @@
 <script>
 var timer;
 var $image = $("#propic");
+var $search_results = $("#search_results");
 var $calculation = $("#calculation_results");
 var prof = "<%= @user.profile_picture %>";
 
@@ -25,9 +26,12 @@ $(document).ready(function() {
     $("#user_search").keyup(function (event) {
             query = this.value;
             if (query.length > 0) {
+                $search_results.show();
                 get_search_results(this.value, function (results) {
                     display_results(results);
                 });
+            } else {
+                $search_results.hide();
             }
             });
     $("#logout").click(function(event) {
@@ -48,17 +52,22 @@ $(document).ready(function() {
     startVideo();
     process_images(<%= @user.id %>, function(data) {
         breakPictureRotation();
-        $("#calculation_results").prepend("Selfiness score: " + data["selfies"] + "<br>"
-            + "<div class='fb-share-button' data-href='http://selfieaware.com/' data-width='200' data-type='button'></div><br>");
+        $("#calculation_results").prepend("Selfiness:<br><span class='score'>" + data["selfies"] + "%</span><br>of your Instagram pictures are of you<br>"
+            + "<div class='fb-share-button' data-href='" + data["link"]
+            + "' data-width='200' data-type='button'></div><br>"
+            + "<span class='results_grey_link'>"
+            + "<a href='" + data["link"] + "'>Static link</a> | "
+            + "<a href='" + data["link"] + "/flush'>Reset Cache</a>"
+            + "</span>");
         FB.XFBML.parse();
     });
 });
 
 function display_results(results) {
-    $("#search_results").html("");
+    $search_results.html("");
     users = results["results"];
     $.each(users, function(i, user) {
-        $("#search_results").append(user_html(user));
+        $search_results.append(user_html(user));
     })
 }
 
@@ -70,11 +79,10 @@ function breakPictureRotation() {
 }
 
 function user_html(user) {
-    return "<a href='/home/" + user["id"] + "'><div class='search_result'><img src='" + user["profile_picture"] + "'><div>@" + user["username"] + "<div>" + user["full_name"] + "</div></div></div></a>";
+    return "<a href='/home/" + user["id"] + "'><div class='search_result'><img src='" + user["profile_picture"] + "'><div>" + user["full_name"] + "<div>@" + user["username"] + "</div></div></div></a>";
 }
 
 var startVideo = function() {
-    //Static list of links for testing
     var links = <%== @images %>;
     var index = 0;
     var timeInterval = 300;
