--- a/app/views/layouts/about.html.erb
+++ b/app/views/layouts/about.html.erb
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="CONTENT">
-    <meta name="author" content="Hunter Rosenblume, Louis Williams, Chris Altonji, Sidney Durant">
+    <meta name="author" content="Louis Williams, Hunter Rosenblume, Chris Altonji, Sidney Durant">
     <link rel="shortcut icon" href="assets/images/favicon.png">
     <title>#SelfieAware: Save yourself from the Selfie Nation.</title>
 </head>
