--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,14 +12,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Selfie Aware uses advanced facial recognition algorithms to calculate selfiness">
-    <meta name="author" content="Hunter Rosenblume, Louis Williams, Chris Altonji, Sidney Durant">
-    <meta property="og:image"content="http://selfieaware.com/assets/insta.png" />
+    <meta name="description" content="Selfie Aware uses advanced facial recognition algorithms to calculate the percentage of Instagram pictures that are of you">
+    <meta name="author" content="Louis Williams, Hunter Rosenblume, Chris Altonji, Sidney Durant">
+
+    <!-- Facebook OG -->
+    <meta property="og:image"content="http://selfieaware.com/assets/selfieaware.png" />
     <meta property="og:title" content="SelfieAware"/>
-    <meta property="og:url" content="http://www.SelfieAware.com"/>
-    <meta property="og:description" content="Selfie Aware uses advanced facial recognition algorithms to calculate selfiness"/>
+    <meta property="og:url" content="http://selfieaware.com"/>
+    <meta property="og:description" content="Selfie Aware uses advanced facial recognition algorithms to calculate selfiness, the percentage of your Instagram pictures that are of you"/>
     <meta property="og:locale" content="en_US"/>
-    <link rel="shortcut icon" href="assets/images/favicon.ico">
     <%= favicon_link_tag 'favicon.ico' %>
 </head>
 <body>
