--- a/app/views/layouts/results.html.erb
+++ b/app/views/layouts/results.html.erb
@@ -5,7 +5,13 @@
   created by: Sidney Durant, Louis Williams, Chris Altonji, and Hunter Rosenblume
 -->
 <head>
-  <title>SelfieAware</title>
+  <title>
+
+  <% if content_for?(:title) %>
+    <%= "#{yield(:title)} | " %>
+  <% end %>
+  SelfieAware
+  </title>
   <%= stylesheet_link_tag    "results", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -13,33 +19,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Uses facial recognition to find a score of selfiness">
-    <meta name="author" content="Hunter Rosenblume, Louis Williams, Chris Altonji, Sidney Durant">
-    <meta property="og:image"content="http://selfieaware.com/assets/insta.png" />
-    <meta property="og:title" content="SelfieAware calculates selfiness."/>
-    <meta property="og:url" content="http://www.selfieaware.com"/>
-    <meta property="og:description" content="Selfie Aware uses advanced facial recognition algorithms to calculate selfiness"/>
+    <meta name="author" content="Louis Williams, Hunter Rosenblume, Chris Altonji, Sidney Durant">
     <meta property="og:locale" content="en_US"/>
+    <% if content_for?(:head) %>
+      <%= yield(:head) %>
+    <% end %>
     <link rel="shortcut icon" href="assets/images/favicon.ico">
     <%= favicon_link_tag 'favicon.ico' %>
 </head>
 <body>
 <div id="fb-root" style="display: none"></div>
 <script>
-window.fbAsyncInit = function() {
-        FB.init({
-          appId      : '{your-app-id}',
-          status     : true,
-          xfbml      : true
-        });
-      };
-(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
 
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));
+window.fbAsyncInit = function() {
+  FB.init({
+    appId      : '290229747798878',
+    xfbml      : true,
+    version    : 'v2.0'
+  });
+};
+(function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
 
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
